k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /register
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /validate
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-ui
                port:
                  number: 80
